Fix overlapping buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,14 +64,6 @@ p {
     text-align: left;
 }
 
-.btn {
-    margin: 0 15px 0 0;
-}
-
-.download-btn {
-    margin: 7%, 3%, 5%, 2%;
-}
-
 .phone-img {
     position: absolute;
     right: 23%;
@@ -85,6 +77,10 @@ p {
     line-height: 1.5;
     margin-bottom: 4%;
 }
+
+/* .title-download-btn {
+    margin: 0 20px 0 20px;
+} */
 
 /* Features Section*/
 
@@ -131,7 +127,7 @@ p {
 }
 
 .testimonial-text {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
     line-height: 1.5;
 }
 
@@ -164,8 +160,13 @@ p {
 }
 
 /* Call to Action Section*/
+
+.cta-download-btn {
+    margin: 0 15px 0 0;
+}
+
 .cta-text {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
     font-weight: 800;
     line-height: 1.5;
     margin-bottom: 4%;
@@ -195,7 +196,7 @@ p {
     }
 
     .phone-img {
-        margin-left: 45%;
+        margin-left: 25%;
         margin-top: 3%;
         min-width: 300px;
         position: static;
